--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasourse.url= jdbc:postgresql://localhost:5432/hogwats
+spring.datasource.username= student
+spring.datasource.password= 123
+spring.jpa.hibernate.ddl-auto= update
