--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/hogwats
 spring.datasource.username=student
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+student.avatar.dir.path=/avatars
+
