--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.username=student
 spring.datasource.password=123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 student.avatar.dir.path=/avatars
+
 
