--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
 student.avatar.dir.path=/avatars
-
-
+logging.level.ru.hogwarts.school.lvl3.Service.StudentService=DEBUG
+logging.level.ru.hogwarts.school.lvl3.Service.FacultyService=DEBUG
+logging.level.ru.hogwarts.school.lvl3.Service.AvatarService=DEBUG
+server.port=8089
